# CppWiki

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  antora-playbook.yml  cblite-compatibility.patch  vcpkg-configuration.json  vcpkg.json
benchmarks/kdgantt_benchmark/: CMakeLists.txt  gantt_diagnostic.cc  gantt_diagnostic.h  main.cc  synthetic_task_model.cc  synthetic_task_model.h
src/: CMakeLists.txt  main.cc
src/admin/: admin_client.cc  admin_client.h  admin_http_client.cc  admin_http_client.h  admin_response_parsing.cc  admin_response_parsing.h  admin_token_store.cc  admin_token_store.h  main.cc  system_keychain_backend.cc  system_keychain_backend.h
src/app/: accent_color.cc  accent_color.h  app_context.h  application.cc  application.h  application_stylesheet.cc  application_stylesheet.h  cppwiki.qss  editor_fallback.cc  editor_fallback.h  editor_fallback.html  program_settings.cc  program_settings.h
src/auth/: ai_api_key_store.cc  ai_api_key_store.h  auth_session_manager.cc  auth_session_manager.h  auth_token_bundle.h  auth_token_store.cc  auth_token_store.h
src/backend/: backend_client.cc  backend_client.h
src/bridge/: editor_bridge.cc  editor_bridge.h
src/core/: constants.h  logging.cc  logging.h  qt_string.h  uuid.cc  uuid.h
src/document/: block_note_snapshot.h  document.h  document_validator.cc  document_validator.h
src/gui/: coming_soon_widget.cc  coming_soon_widget.h  document_context_menu.cc  document_context_menu.h  document_tree_item_delegate.cc  document_tree_item_delegate.h  document_tree_model.cc  document_tree_model.h  document_tree_view.cc  document_tree_view.h  i_page.h  import_destination_dialog.cc  import_destination_dialog.h  main_window.cc  main_window.h  main_window_helpers.cc  main_window_helpers.h  page.cc  page.h  page_helpers.cc  page_helpers.h  presence_strip_widget.cc  presence_strip_widget.h  settings_dialog.cc  settings_dialog.h  workspace_rail_widget.cc  workspace_rail_widget.h
src/gui/merge/: conflict_merge_dialog.cc  conflict_merge_dialog.h  conflict_merge_model.cc  conflict_merge_model.h  conflict_merge_resolution.cc  conflict_merge_resolution.h
src/gui/project_board/: project_board_native_widget.cc  project_board_native_widget.h
src/gui/project_board/gantt/: CMakeLists.txt  project_board_gantt_critical_path.cc  project_board_gantt_critical_path.h  project_board_gantt_item_delegate.cc  project_board_gantt_item_delegate.h  project_board_gantt_model.cc  project_board_gantt_model.h  project_board_gantt_widget.cc  project_board_gantt_widget.h
src/gui/project_board/kanban/: CMakeLists.txt  kanban_column.cc  (+11 more)
src/gui/qml/: ConflictMergeEditor.qml
src/server/: CMakeLists.txt  server_application.cc  server_application.h  server_config.h  server_main.cc
src/server/app/: main.cc  server_application.cc  server_application.h
src/server/assets/: openapi_spec.h  swagger_ui_page.h
src/server/components/: ai_config_component.cc  ai_config_component.h  cppwiki_server_component.cc  cppwiki_server_component.h  sync_bootstrap_component.cc  sync_bootstrap_component.h
src/server/config/: runtime_config.cc  runtime_config.h  server_config.cc  server_config.h  server_config_dto.h  static_config_factory.cc  static_config_factory.h
src/server/controllers/: auth_controller.cc  auth_controller.h  health_controller.cc  health_controller.h  lock_controller.cc  lock_controller.h  presence_controller.cc  presence_controller.h
src/server/dto/: admin_response.h  ai_response.h  api_dto.h  api_response.h  auth_responses.h  health_response.cc  health_response.h  json_adapter.h  lock_response.cc  lock_response.h  lock_responses.h  presence_response.cc  presence_response.h  presence_responses.h  response_envelope.cc  response_envelope.h  sync_config_response.h  workspace_response.h
src/server/filters/: jwt_auth_filter.cc  jwt_auth_filter.h
src/server/handlers/: admin_handler.cc  admin_handler.h  ai_handler.cc  ai_handler.h  handler_utils.cc  handler_utils.h  health_handler.cc  health_handler.h  lock_handler.cc  lock_handler.h  openapi_handler.cc  openapi_handler.h  options_handler.cc  options_handler.h  presence_handler.cc  presence_handler.h  protected_page_handler.cc  protected_page_handler.h  swagger_ui_handler.cc  swagger_ui_handler.h  sync_config_handler.cc  sync_config_handler.h  workspace_handler.cc  workspace_handler.h
src/server/http/: health_controller.h
src/server/logging/: logger.cc  logger.h
src/server/middleware/: auth_checker_impl.cc  auth_checker_impl.h  logging_middleware.cc  logging_middleware.h
src/server/openapi/: swagger.cc  swagger.h
src/server/service/: ai_chat_service.cc  ai_chat_service.h  lock_service.cc  lock_service.h  presence_service.cc  presence_service.h  sync_gateway_adapter.cc  sync_gateway_adapter.h
src/storage/: cblite_document_repository.cc  cblite_document_repository.h  file_document_repository.cc  file_document_repository.h  local_document_repository.h  repository_factory.cc  repository_factory.h
src/sync/: document_sync_service.cc  document_sync_service.h  sync_bootstrap.cc  sync_bootstrap.h  sync_service.cc  sync_service.h  sync_state_provider.h
tests/: CMakeLists.txt
tests/admin/: admin_response_parsing_test.cc  admin_token_store_test.cc
tests/app/: program_settings_test.cc
tests/bridge/: editor_bridge_test.cc
tests/document/: document_validator_test.cc
tests/gui/: conflict_merge_model_test.cc  conflict_merge_resolution_test.cc  document_context_menu_test.cc  document_tree_model_test.cc  kanban_board_model_test.cc  project_board_gantt_test.cc  project_board_table_model_test.cc
tests/server/config/: server_config_test.cc
tests/server/dto/: health_dto_test.cc
tests/server/http/: health_handler_test.cc  lock_stub_test.cc
tests/server/middleware/: auth_checker_test.cc
tests/server/service/: ai_chat_service_test.cc
tests/storage/: cblite_cpp_smoke_test.cc  cblite_repository_test.cc  file_document_repository_test.cc  local_document_repository_test.cc
tests/sync/: document_sync_service_test.cc
(+168 files in other folders)
